@@ -46,17 +46,17 @@
 			<!-- ###SINGLEROW### begin -->
 				<!-- ###HEADER### -->
 				<tr class="tx-wseevents-pi1-listrow-header">
-					<td valign="top"><p>###NUMBER###</p></td><td valign="top"><p>###NAME###</p></td><td valign="top"><p>###SPEAKER###</p></td><td valign="top"><p>###ROOM###</p></td><td valign="top"><p>###TIMESLOTS###</p></td>
+					<td valign="top"><p>###NUMBER###</p></td><td valign="top"><p>###NAME###</p></td><td valign="top"><p>###SPEAKER###</p></td><td valign="top"><p>###TIMESLOTS###</p></td>
 				</tr>
 				<!-- ###HEADER### -->
 				<!-- ###ITEM### -->
 				<tr class="tx-wseevents-pi1-listrow-even">
-					<td valign="top"><p>###NUMBER###</p></td><td valign="top" title="###TEASERDATA###"><p>###NAME###</p></td><td valign="top"><p>###SPEAKER###</p></td><td valign="top"><p>###ROOM###</p></td><td valign="top"><p>###TIMESLOTS###</p></td>
+					<td valign="top"><p>###NUMBER###</p></td><td valign="top" title="###TEASERDATA###"><p>###NAME###</p></td><td valign="top"><p>###SPEAKER###</p></td><td valign="top"><p>###TIMESLOTS###</p></td>
 				</tr>
 				<!-- ###ITEM### -->
 				<!-- ###ITEM_ALT### -->
 				<tr class="tx-wseevents-pi1-listrow-odd">
-					<td valign="top"><p>###NUMBER###</p></td><td valign="top" title="###TEASERDATA###"><p>###NAME###</p></td><td valign="top"><p>###SPEAKER###</p></td><td valign="top"><p>###ROOM###</p></td><td valign="top"><p>###TIMESLOTS###</p></td>
+					<td valign="top"><p>###NUMBER###</p></td><td valign="top" title="###TEASERDATA###"><p>###NAME###</p></td><td valign="top"><p>###SPEAKER###</p></td><td valign="top"><p>###TIMESLOTS###</p></td>
 				</tr>
 				<!-- ###ITEM_ALT### -->
 			<!-- ###SINGLEROW### end -->
@@ -84,6 +84,9 @@
 				<!-- ###SESSIONROW### -->
 				<tr class="tx-wseevents-pi1-listrow-header">
 					<td></td><td valign="top"><p title="###SESSIONTEASER###">###SESSIONNUMBER### - ###SESSIONNAME###</p></td>
+				</tr>
+				<tr class="tx-wseevents-pi1-listrow-header">
+					<td></td><td valign="top"><p>###SESSIONSLOTS###</p></td>
 				</tr>
 				<tr class="tx-wseevents-pi1-listrow-header">
 					<td></td><td valign="top"><p>###SESSIONDESCRIPTION###</p></td>
